# pointcloud_to_image

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml
include/: pointcloud_to_image.hpp  yaml_parser.hpp
src/: main.cc  pointcloud_to_image.cc  pointcloud_to_image.hpp  yaml_parser.hpp
